tests/errors/nogilcmeth.pxd
cdef class C:
    cdef void f(self) nogil
